tests/kubernetes/custom-5.4.3/compliant/node.yaml
apiVersion: v1
kind: Node
metadata:
  name: compliant-node
  annotations:
    private-node: "true"
