tests/kubernetes/custom-5.4.3/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-5.4.3-compliant
policies:
  - ../../../../policies/kubernetes/pod-security/custom-5.4.3.yaml
resources:
  - node.yaml
results:
  - policy: custom-5-4-3-private-nodes
    rule: check-private-nodes
    resources:
      - compliant-node
    kind: Node
    result: pass
